<resources>
    <string name="app_name">GameSource</string>
    <string name="activityCalendar">Calendario</string>
    <string name="activitySearch">Búsqueda</string>
    <string name="activityFavorites">Favoritos</string>
    <string name="activityOption">Opciones</string>
    <string name="Volver">&lt; <b>volver</b></string>
    <string name="opciones"><b>Opciones</b></string>
    <string name="notificaciones"><b>Notificaciones</b></string>
    <string name="cuenta"><b>Cuenta</b></string>
    <string name="ayuda"><b>Ayuda</b></string>
    <string name="latestGame">Juego destacado</string>
    <string name="stringPrecioAlert">Precio</string>
    <string name="copyright">© GameSource - GameSource.es \n Universida Europea</string>
    <string name="social">Social:</string>
    <string name="share"><b>Comparte</b></string>
    <string name="emailTV"><b>EMAIL</b></string>
    <string name="emailHint"><b>Email</b></string>
    <string name="passTV"><b>CONTRASEÑA</b></string>
    <string name="passHint"><b>Contraseña</b></string>
    <string name="socialLogin"><b>Social</b></string>
    <string name="dontHaveAccount"><b>¿No tienes una cuenta?</b></string>
    <string name="registerBTN"><b><u>Regístrate</u></b></string>
    <string name="nameRegister"><b>NOMBRE</b></string>
    <string name="nameRegisterHint"><b>Nombre</b></string>
    <string name="lastNameRegister"><b>APELLIDO</b></string>
    <string name="lastNameRegisterHint"><b>Apellido</b></string>
    <string name="emailRegister"><b>EMAIL</b></string>
    <string name="emailRegisterHint"><b>Email</b></string>
    <string name="passRegister"><b>CONTRASEÑA</b></string>
    <string name="passRegisterHint"><b>Contraseña</b></string>
    <string name="RePassRegister"><b>CONFIRMA LA CONTRASEÑA</b></string>
    <string name="RePassRegisterHint"><b>Repite la contraseña</b></string>
    <string name="register"><b>REGISTRARSE</b></string>
    <string name="send">Enviar</string>
    <string name="rate"><b>Puntua</b></string>
    <string name="sameActivity">¡Ya estás aquí!</string>
    <string name="coming_soon">Próximamente</string>
    <string name="share_message">La mejor App donde conseguir todos juegos GRATIS de todas las plataformas, todo en uno ¿A qué esperas para descargarla? \n <u><b>¡¡¡Unete YA!! \n</b> </u><p>https://play.google.com/store/apps/details?id=com.pass.gamesource</p></string>
    <string name="share_messageGame"><a href="https://play.google.com/store/apps/details?id=com.pass.gamesource">GameSource</a> ha encontrado este juego gratuito ¡Descárgalo ya! \n </string>
    <string name="calendar_title"><b>Próximos Lanzamientos</b></string>
    <string name="signIn"><b>Entrar</b></string>
    <string name="signUp"><b>Registrarse</b></string>
    <string name="tool"><b>Herramientas</b></string>
    <string name="updateToast"><b>Actualizado</b></string>
    <string name="botonIrAJuego">Ir al juego</string>
    <string name="botoncompartirJuego">Comparte</string>
    <string name="tituloRecyclerSteam"><b>Steam</b></string>
    <string name="tituloRecyclerPlayStation"><b>PlayStation</b></string>
    <string name="tituloRecyclerNintendo"><b>Nintendo</b></string>
    <string name="tituloRecyclerEpic"><b>Epic Games</b></string>
    <string name="googleTitle">Sign In</string>
    <string name="here">Ya estas aquí</string>
    <string name="passnotmatch">Las contraseñas no coinciden</string>
    <string name="passlength">La contraseña debe tener una longitud superior o igual a 6 caracteres</string>
    <string name="valuempty">Email y contraseña no pueden estar vacios</string>
    <string name="alreadysignin">Ya se ha iniciado sesion con: %s</string>
    <string name="signinwelcome">"Bienvenido, has iniciado sesion con:  %s</string>
    <string name="authenticationfailed">Ha fallado la autenticacion</string>



    <!--    #####################################Google################################################-->
    <!--Google -->

    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="top_app_bar_label_title">Top app bar</string>
    <string name="app_bar_menu_share">Share</string>
    <string name="app_bar_menu_search">Search</string>
    <string name="app_bar_menu_bookmark">Bookmark</string>
    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">GameSource</string>
    <string name="oops">Oops! ¡Parece que este día no sale nada nuevo!</string>

</resources>