<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/option"
            android:icon="@drawable/img_setting_foreground"
            android:title="@string/opciones" />
        <item
            android:id="@+id/notification"
            android:icon="@drawable/img_notificacion_foreground"
            android:title="@string/notificaciones" />
    </group>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/account"
            android:icon="@drawable/img_user_foreground"
            android:title="@string/cuenta" />
    </group>

    <item android:title="@string/social">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/share"
                    android:icon="@drawable/img_share_logo_foreground"
                    android:title="@string/share" />

                <item
                    android:id="@+id/rate"
                    android:icon="@drawable/img_reviews_logo_foreground"
                    android:title="@string/valoracion" />

                <item
                    android:id="@+id/info"
                    android:icon="@drawable/img_info_foreground"
                    android:title="@string/ayuda" />
            </group>
        </menu>
    </item>

</menu>
