<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/black_GameSource">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/nameRegister"
        android:visibility="invisible"
        android:textColor="@color/white_GameSource"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_nameRegister"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_nameRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round"
        android:backgroundTint="@color/gray_GameSource"
        android:hint="@string/nameRegisterHint"
        android:padding="7dp"
        android:pointerIcon="text"
        android:textColor="@color/orange_GameSource"
        android:textColorHint="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_lastNameRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_lastNameRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round"
        android:backgroundTint="@color/gray_GameSource"
        android:hint="@string/lastNameRegisterHint"
        android:padding="7dp"
        android:pointerIcon="text"
        android:textColor="@color/orange_GameSource"
        android:textColorHint="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_emailRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_emailRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:autoLink="email"
        android:background="@drawable/round"
        android:backgroundTint="@color/gray_GameSource"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:padding="7dp"
        android:pointerIcon="text"
        android:textColor="@color/orange_GameSource"
        android:textColorHint="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_passRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_passRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round"
        android:backgroundTint="@color/gray_GameSource"
        android:hint="@string/passRegisterHint"
        android:inputType="textPassword"
        android:padding="7dp"
        android:pointerIcon="text"
        android:textColor="@color/orange_GameSource"
        android:textColorHint="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_rePassRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_rePassRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round"
        android:backgroundTint="@color/gray_GameSource"
        android:hint="@string/RePassRegisterHint"
        android:inputType="textPassword"
        android:padding="6dp"
        android:pointerIcon="text"
        android:textColor="@color/orange_GameSource"
        android:textColorHint="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_lastNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/lastNameRegister"
        android:visibility="invisible"
        android:textColor="@color/white_GameSource"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_lastNameRegister"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_emailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/emailRegister"
        android:textColor="@color/white_GameSource"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_emailRegister"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_passRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/passRegister"
        android:textColor="@color/white_GameSource"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_passRegister"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_registrarse"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round"
        android:text="@string/register"
        android:textColor="@color/black_GameSource"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rePassRegister" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-500dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="879dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="999dp" />

    <ImageView
        android:id="@+id/iv_fondo_logoG"
        android:layout_width="2159dp"
        android:layout_height="510dp"
        android:layout_marginStart="390dp"
        android:layout_marginTop="200dp"
        android:alpha="0.1"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHDown"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVRight"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="@+id/guidelineVLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHUp"
        app:layout_constraintVertical_bias="0.537"
        app:srcCompat="@drawable/gamesinfondo" />

    <ImageView
        android:id="@+id/iv_fondo_logoS"
        android:layout_width="1210dp"
        android:layout_height="1550dp"
        android:layout_marginTop="1200dp"
        android:layout_marginEnd="880dp"
        android:alpha="0.1"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHDown"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVRight"
        app:layout_constraintTop_toTopOf="@+id/guidelineHUp"
        app:layout_constraintVertical_bias="0.767"
        app:srcCompat="@drawable/sourcesinfondo" />

    <ImageView
        android:id="@+id/iv_accounLogo"
        android:layout_width="357dp"
        android:layout_height="250dp"
        android:alpha="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_account_logo_foreground" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Volver"
        android:textColor="@color/white_GameSource"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_accounLogo"
        app:layout_constraintVertical_bias="0.048" />

</androidx.constraintlayout.widget.ConstraintLayout>